syntax = "proto3";
package ai.floedb.metacat.query;

import "query/engine_specific.proto";

option java_multiple_files = true;
option java_package = "ai.floedb.metacat.query.rpc";

/**
 * UNIFIED ENGINE-NEUTRAL SQL OBJECT MODEL
 */

enum Origin {
  ORIGIN_UNSPECIFIED = 0;
  ORIGIN_BUILTIN = 1;  // shipped by engine
  ORIGIN_USER = 2;     // created via DDL
}

/** 
 * FUNCTION  (scalar, aggregate, window)
 */ 
message SqlFunction {
  string name = 1;
  repeated string argument_types = 2;  // fully resolved type names
  string return_type = 3;

  bool is_aggregate = 4;   // functional category
  bool is_window = 5;

  Origin origin = 10;

  repeated EngineSpecific engine_specific = 99;
}

/** 
 * OPERATOR
 */ 
message SqlOperator {
  string name = 1;       // e.g. "+", "=", "||"
  string left_type = 2;
  string right_type = 3;
  string return_type = 4;

  bool is_commutative = 5;  // optional, universal property
  bool is_associative = 6;  // optional, universal property

  Origin origin = 10;

  repeated EngineSpecific engine_specific = 99;
}

/** 
 * TYPE
 */
message SqlType {
  string name = 1;
  string category = 2;      // numeric, string, bool, date, etc.
  bool is_array = 3;
  string element_type = 4;  // if array

  Origin origin = 10;

  repeated EngineSpecific engine_specific = 99;
}

/**
 * CAST
 */
message SqlCast {
  string source_type = 1;
  string target_type = 2;

  // implicit, assignment, explicit
  string method = 3;

  Origin origin = 10;

  repeated EngineSpecific engine_specific = 99;
}

/**
 * COLLATION
 */
message SqlCollation {
  string name = 1;
  string locale = 2;

  Origin origin = 10;

  repeated EngineSpecific engine_specific = 99;
}

/**
 * AGGREGATE
 */
message SqlAggregate {
  string name = 1;
  repeated string argument_types = 2;
  string return_type = 3;

  // minimal engine-neutral requirement
  string state_type = 4;  // needed for type-checking only

  Origin origin = 10;

  repeated EngineSpecific engine_specific = 99;
}
